test/negative/feature_omittedlocalinitializer.java

public class feature_omittedlocalinitializer {
  public feature_omittedlocalinitializer() {}
  public void m() {
    int x /* = 0 */;
  }
}

